<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信开放平台语音识别</string>
    <string name="action_settings">Settings</string>
    <string name="logo">logo</string>
    <string name="play">播放</string>
    <string name="et_words">点击开始说话</string>
    <string name="right_arrow">></string>
    <string name="single_reco">单次识别</string>
    <string name="recognizer">语音识别</string>
    <string name="recognizer_cont">语音识别连续</string>
    <string name="recognizer_data">数据识别</string>
    <string name="recognizer_data_cont">数据识别连续</string>
    <string name="recognizer_postbyself">自行收发语音识别</string>
    <string name="recognizer_postbyself_data">自行收发数据识别</string>
    <string name="recognizer_browser">语音识别浏览器</string>
    <string name="tts">语音合成</string>

</resources>